Added some basic information about myself

--- a/index.html
+++ b/index.html
@@ -9,23 +9,31 @@
 </head>
 
 <body>
-  <h1>Andrew Plourde</h1>
-  <p>
-    <em>College graduate</em>
-  </p>
+  <table cellspacing="20">
+    <tr>
+      <td>
+        <img src="" height="300" width="300" alt="Andrew Plourde's face">
+      </td>
+      <td>
+        <h1>Andrew Plourde</h1>
+        <p>
+          <em>College graduate</em>
+        </p>
+        <p>
+          My name is Andrew Plourde and I am a fledgling programmer passionate<br>
+          about software development and learning new things! I am a recent<br>
+          graduate of <i>Georgia Gwinnett College</i> with a BS in information<br>
+          technology. I am interested in working in the field of software development<br>
+          and I am available for hire.
+        </p>
+      </td>
+    </tr>
+  </table>
 
-  <p>
-    My name is Andrew Plourde and I am a fledgling programmer passionate
-    about software development and learning new things! I am a recent
-    graduate of <i>Georgia Gwinnett College</i> with a BS in information
-    technology. I am interested in working in the field of software development
-    and I am available for hire.
-  </p>
   <hr>
 
   <h3>Education</h3>
-  <p>
-  <h4>College</h4>
+
   <ul>
     <li>Georgia Gwinnett College</li>
     <li>Bachelor of Science in Information Technology - Concentration :
@@ -51,10 +59,82 @@
   <h4>Technical Certifications</h4>
   <ul>
     <li>W3Schools PHP Developer Certification</li>
-    <img src='Images/w3schoolsCertified.jpg' height="50" width="150">
+    <img src='Images/w3schoolsCertified.jpg' height="50" width="150" alt="w3schools Seal of Certification">
     <br>
     This certification can be verified <a href='https://certification.w3schools.com/w3certified.asp?id=11815102'>here</a>.
   </ul>
+  <hr>
+  <h3>Work Experience</h3>
+  <table cellspacing ="10">
+    <thead>
+      <th>Dates</th>
+      <th>Work</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>09/3/2020 - present</td>
+        <td>UPS Clerk</td>
+      </tr>
+      <tr>
+        <td>06/28/2020 - 09/3/2020</td>
+        <td>Warehouse Associate</td>
+      </tr>
+      <tr>
+        <td>08/2019 - 01/2020</td>
+        <td>Barista</td>
+      </tr>
+    </tbody>
+
+    <tfoot>
+
+    </tfoot>
+
+  </table>
+  <hr>
+  <h3>Skills</h3>
+  <table cellspacing = "10">
+    <thead>
+      <th>Skill</th>
+      <th>Proficiency</th>
+      <th>Skill</th>
+      <th>Proficiency</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Java</td>
+        <td>&#11088;&#11088;&#11088;&#11088;</td>
+        <td>HTML</td>
+        <td>&#11088;</td>
+      </tr>
+      <tr>
+        <td>Selenium</td>
+        <td>&#11088;&#11088;&#11088;</td>
+        <td>CSS</td>
+        <td>&#11088;</td>
+      </tr>
+      <tr>
+        <td>PHP</td>
+        <td>&#11088;&#11088;&#11088;</td>
+        <td>Javascript</td>
+        <td>&#11088;</td>
+      </tr>
+      <tr>
+        <td>JIRA</td>
+        <td>&#11088;&#11088;&#11088;</td>
+      </tr>
+      <tr>
+        <td>SQL</td>
+        <td>&#11088;&#11088;</td>
+      </tr>
+    </tbody>
+    <tfoot>
+
+    </tfoot>
+  </table>
+  <hr>
+  <h3><a href="contact_me.html">Contact Me</a>
+    <h3>
+
 </body>
 
 </html>
